<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#F8F7F7"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.16"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:id="@+id/setting_user"
            android:layout_weight="7"
            android:layout_width="0dp"
            android:layout_height="wrap_content">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/user_image"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:src="@drawable/image" />

            <TextView
                android:id="@+id/user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="25dp"
                android:layout_toRightOf="@+id/user_image"
                android:text="@string/setting_sign_in"
                android:textSize="26sp" />

            <TextView
                android:id="@+id/user_phoneNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/user_name"
                android:layout_marginTop="8dp"
                android:layout_toRightOf="@+id/user_image"
                android:drawableStart="@drawable/ic_notification"
                android:drawablePadding="2dp"
                android:gravity="center"
                android:text="1367895425"
                android:textStyle="bold" />
        </RelativeLayout>

        <ImageView
            android:id="@+id/QR_code"
            android:paddingHorizontal="10dp"
            android:src="@drawable/one"
            android:layout_weight="1.5"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

        <ImageView
            android:id="@+id/remind"
            android:paddingHorizontal="10dp"
            android:src="@drawable/two"
            android:layout_weight="1.5"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView1"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        android:layout_width="match_parent"
        android:orientation="vertical"
        app:cardCornerRadius="10dp"
        android:layout_margin="5dp"
        android:elevation="5dp"
        app:layout_constraintHeight_percent="0.22"
        android:layout_height="0dp">

        <LinearLayout
            android:weightSum="4"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:drawableTop="@drawable/pencil"
                android:paddingTop="35dp"
                android:layout_weight="1"
                android:text="@string/setting_font"
                android:gravity="center"
                android:layout_width="0dp"
                android:layout_height="match_parent"/>
            <TextView
                android:drawableTop="@drawable/notifications"
                android:paddingTop="35dp"
                android:layout_weight="1"
                android:text="@string/setting_remind"
                android:gravity="center"
                android:layout_width="0dp"
                android:layout_height="match_parent"/>
            <TextView
                android:drawableTop="@drawable/calendar"
                android:paddingTop="35dp"
                android:layout_weight="1"
                android:text="@string/setting_notice"
                android:gravity="center"
                android:layout_width="0dp"
                android:layout_height="match_parent"/>
            <TextView
                android:drawableTop="@drawable/folder"
                android:paddingTop="35dp"
                android:layout_weight="1"
                android:text="@string/setting_exterior"
                android:gravity="center"
                android:layout_width="0dp"
                android:layout_height="match_parent"/>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        app:layout_constraintTop_toBottomOf="@+id/cardView1"
        android:layout_width="match_parent"
        android:orientation="vertical"
        app:cardCornerRadius="10dp"
        android:layout_margin="5dp"
        android:layout_marginTop="10dp"
        android:elevation="5dp"
        app:layout_constraintHeight_percent="0.2"
        android:layout_height="0dp">
        <LinearLayout
            android:padding="8dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/accout"
                android:layout_weight="1"
                android:text="@string/setting_account"
                android:textSize="28dp"
                android:drawableEnd="@drawable/ic_vector"
                android:gravity="center|left"
                android:layout_width="match_parent"
                android:layout_height="0dp"/>
            <View
                android:layout_weight="0.05"
                android:background="@color/aliceblue"
                android:layout_width="match_parent"
                android:layout_height="0dp"/>
            <TextView
                android:id="@+id/general_settings"
                android:layout_weight="1"
                android:text="@string/setting_more_settings"
                android:textSize="28dp"
                android:drawableEnd="@drawable/ic_vector"
                android:gravity="center|left"
                android:layout_width="match_parent"
                android:layout_height="0dp"/>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        app:layout_constraintTop_toBottomOf="@+id/cardView2"
        android:layout_width="match_parent"
        android:orientation="vertical"
        app:cardCornerRadius="10dp"
        android:layout_margin="5dp"
        android:layout_marginTop="10dp"
        android:elevation="0dp"
        app:layout_constraintHeight_percent="0.2"
        android:layout_height="0dp">
        <LinearLayout
            android:padding="8dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/abnormal_feedback"
                android:layout_weight="1"
                android:text="@string/setting_feedback"
                android:textSize="28dp"
                android:drawableEnd="@drawable/ic_vector"
                android:gravity="center|left"
                android:layout_width="match_parent"
                android:layout_height="0dp"/>
            <View
                android:layout_weight="0.05"
                android:background="@color/aliceblue"
                android:layout_width="match_parent"
                android:layout_height="0dp"/>
            <TextView
                android:id="@+id/concern"
                android:layout_weight="1"
                android:text="@string/setting_about"
                android:textSize="28dp"
                android:drawableEnd="@drawable/ic_vector"
                android:gravity="center|left"
                android:layout_width="match_parent"
                android:layout_height="0dp"/>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/quit"
        android:layout_width="match_parent"
        android:text="@string/setting_sign_out"
        android:textSize="28sp"
        android:textColor="@color/red"
        android:backgroundTint="@color/white"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.1"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="8dp"
        app:layout_constraintTop_toBottomOf="@+id/cardView" />
</androidx.constraintlayout.widget.ConstraintLayout>