<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <RelativeLayout
        android:layout_margin="16dp"
        android:layout_width="120pt"
        android:layout_height="120pt">

        <TextView
            android:id="@+id/dialog_no_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/dialog_labels_no_tag"
            android:textColor="@color/cadetblue"
            android:textSize="32dp"
            android:textStyle="bold"
            android:visibility="invisible" />
        <me.gujun.android.taggroup.TagGroup
            android:id="@+id/dialog_labels_normal"
            style="@style/TagGroup"
            app:atg_checkedBackgroundColor="@color/cornflowerblue"
            app:atg_checkedTextColor="@color/coral"
            android:visibility="visible"/>

        <me.gujun.android.taggroup.TagGroup
            android:id="@+id/dialog_labels_add"
            style="@style/TagGroup"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:visibility="invisible"
            app:atg_isAppendMode="true" />
    </RelativeLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_marginBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/dialog_add"
            android:text="@string/dialog_labels_add"
            android:textStyle="bold"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:layout_marginStart="24dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"/>

        <TextView
            android:id="@+id/dialog_cancel"
            android:text="@string/dialog_labels_cancel"
            android:textStyle="bold"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:layout_marginStart="96dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"/>
        <RelativeLayout
            android:layout_marginStart="36dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/dialog_submit_add"
                android:text="@string/dialog_labels_submit"
                android:textStyle="bold"
                android:textSize="16sp"
                android:visibility="invisible"
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/dialog_submit_normal"
                android:text="@string/dialog_labels_submit"
                android:textStyle="bold"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </RelativeLayout>


    </LinearLayout>

</LinearLayout>